--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "clsx": "^2.1.1",
     "cssnano": "^7.0.6",
     "embla-carousel-auto-scroll": "^8.3.0",
+    "embla-carousel-autoplay": "^8.3.0",
+    "embla-carousel-class-names": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
