--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-class-names": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "framer-motion": "^11.11.4",
     "lucide-react": "^0.447.0",
     "next": "^14.2.14",
     "react": "^18",
